--- a/19.Bolum/client/package.json
+++ b/19.Bolum/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -18,7 +19,8 @@
     "react-query": "^3.34.16",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
