--- a/19.Bolum/client/package.json
+++ b/19.Bolum/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.19.3",
     "axios": "^0.26.1",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
